--- a/.classpath
+++ b/.classpath
@@ -38,5 +38,6 @@
 	<classpathentry kind="lib" path="C:/Users/Thomas Meyer/Documents/Selenium/lib/xml-apis-1.4.01.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Thomas Meyer/Documents/Selenium/client-combined-3.5.0-nodeps.jar"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/Thomas Meyer/Documents/Selenium/mail-1.5.0-b01.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
